fixed bug with nav bar not closing on click on mobile. Hid the profile cards on mobile when use navigates to edu, prortfolio, or ex pages. and fixed up some margins on mobile

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -316,10 +316,19 @@ ul {
     }
 
     .card-container {
-        margin: auto;
+        margin: 40px auto;
     }
 
     .custom-card-styles {
         margin: 0px auto 20px auto;
     }
+
+    .profile-edu-ex {
+        display: none;
+    }
+
+    .picture-container {
+        margin-top: 100px;
+    }
+
   }
